--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         android:outlineAmbientShadowColor="@color/black"
         android:outlineSpotShadowColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/controls_layout"
+        app:layout_constraintBottom_toBottomOf="@+id/controls_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,43 +28,15 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
-            android:id="@+id/up_button"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="16dp"
-            android:text="U"
+            android:id="@+id/SpawnBall"
+            android:layout_width="141dp"
+            android:layout_height="84dp"
+            android:layout_marginStart="124dp"
+            android:layout_marginTop="56dp"
+            android:text="Gamble"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/down_button"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="28dp"
-            android:text="D"
-            app:layout_constraintEnd_toEndOf="@+id/up_button"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/up_button"
-            app:layout_constraintTop_toBottomOf="@+id/up_button" />
-
-        <Button
-            android:id="@+id/left_button"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="48dp"
-            android:text="L"
-            app:layout_constraintEnd_toStartOf="@+id/up_button"
-            app:layout_constraintTop_toTopOf="@+id/up_button" />
-
-        <Button
-            android:id="@+id/right_button"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="48dp"
-            android:text="R"
-            app:layout_constraintStart_toEndOf="@+id/up_button"
-            app:layout_constraintTop_toTopOf="@+id/up_button" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
