--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,11 +30,13 @@
 
     <TextView
         android:id="@+id/PesoText"
-        android:layout_width="60dp"
-        android:layout_height="35dp"
+        android:layout_width="88dp"
+        android:layout_height="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="serif"
         android:text="25$"
+        android:textAlignment="viewEnd"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
